package ru.medweather.manager.model.dto;

public record UpdateStatusDto(Integer sensorId, Short statusId) {
}
